--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
+<!--
+ * @Author: liangshuo liangshuoone@aliyun.com
+ * @Date: 2024-01-31 18:12:59
+ * @Description: index.html
+ * @LastEditTime: 2024-02-01 08:44:38
+ * @LastEditors: liangshuo liangshuoone@aliyun.com
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./dist/index.umd.js"></script>
 </head>
 <body>
-    <!-- <script type="module">
-    </script> -->
+    <script>
+        console.log(window)
+        const analize = new Analayze({base_url: 'xxxxx'})
+    </script>
 </body>
 </html>
